# digestive-lang

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md  README.org  config.h  dci.py  globals.h  main.cc  main.cpp  options.h  options.hh  setup
ast/: Analyzable.h  Analyzable.hh  BinaryExpr.cc  BinaryExpr.cpp  BinaryExpr.h  BinaryExpr.hh  BlockStmt.cc  BlockStmt.cpp  BlockStmt.h  BlockStmt.hh  Decl.cc  Decl.cpp  Decl.h  Decl.hh  Expr.h  Expr.hh  ExprStmt.h  ExprStmt.hh  FunctionCall.cc  FunctionCall.cpp  FunctionCall.h  FunctionCall.hh  FunctionDecl.cc  FunctionDecl.cpp  FunctionDecl.h  FunctionDecl.hh  IfStmt.cc  IfStmt.cpp  IfStmt.h  IfStmt.hh  IntegerLiteral.cc  IntegerLiteral.cpp  IntegerLiteral.h  IntegerLiteral.hh  Literal.cpp  Literal.h  Literal.hh  LiteralExpr.cpp  LiteralExpr.h  LoopStmt.cc  (+47 more)
ast/type/: DType.cc  DType.cpp  DType.h  DType.hh  PrimitiveType.cc  PrimitiveType.cpp  PrimitiveType.h  PrimitiveType.hh  TupleType.cc  TupleType.cpp  TupleType.h  TupleType.hh  Type.cc  Type.cpp  Type.h  Type.hh  TypeVisitor.h  TypeVisitor.hh  Types.cpp  Types.h  Types.hh
dg/core/: boot.dg
dg/lang/: dg.bnf
docs/: BNF.md  BNF.org  CallingConventions.md  CallingConventions.org  IR.org  IntermediateRepresentation.md
genasm/: ErrHandler.cc  ErrHandler.cpp  ErrHandler.hh  Instr.cc  Instr.cpp  Instr.h  Instr.hh  InstrEnv.cc  InstrEnv.cpp  InstrEnv.h  InstrEnv.hh  Op.cc  Op.cpp  Op.h  Op.hh  TACCompiler.cc  TACCompiler.cpp  TACCompiler.h  TACCompiler.hh
genir/: BinaryExpr.cc  BinaryExpr.cpp  BinaryExpr.hh  BlockStmt.cc  BlockStmt.hh  BuiltIn.cc  BuiltIn.cpp  BuiltIn.h  Expr.cc  Expr.cpp  Expr.h  Expr.hh  Function.cc  Function.cpp  Function.h  Function.hh  FunctionCall.cc  FunctionCall.cpp  FunctionCall.h  FunctionCall.hh  IfStmt.cc  IfStmt.cpp  IfStmt.hh  LoopStmt.cc  LoopStmt.cpp  LoopStmt.h  LoopStmt.hh  Program.cc  Program.cpp  Program.h  Program.hh  Return.cc  Return.cpp  Return.h  Return.hh  Trap.cc  Trap.cpp  Trap.h  Trap.hh  VariableDecl.cc  (+3 more)
interactive/: IO.cc  IO.cpp  IO.h  IO.hh  Interactive.cc  Interactive.cpp  Interactive.h  Interactive.hh
ir/: README.md  TAC.cc  TAC.cpp  TAC.h  TAC.hh  TACCode.h  TACEnv.cpp  TACEnv.h  TACEnvOp.h  TACFun.cc  TACFun.cpp  TACFun.h  TACFun.hh  TACFunOp.h  TACFunOp.hh  TACOp.cc  TACOp.cpp  TACOp.h  TACOp.hh  TACProgram.cc  TACProgram.cpp  TACProgram.h  TACProgram.hh  TACType.cc  TACType.cpp  TACType.h  TACType.hh  TACTypes.h  TACTypes.hh
irgen/: BinaryExpr.cpp  BinaryExpr.h  BlockStmt.cpp  BlockStmt.h  Expr.cpp  Expr.h  Function.cpp  Function.h  FunctionCall.cpp  IfStmt.cpp  IfStmt.h  Program.cpp  Program.h  VariableDecl.cpp  VariableDecl.h
jit/: Backtrace.cc  Backtrace.cpp  Backtrace.h  BuiltIn.cc  BuiltIn.cpp  BuiltIn.h  BuiltIn.hh  Jit.cc  Jit.cpp  Jit.h  Jit.hh  JitContext.cc  JitContext.cpp  JitContext.h  JitContext.hh
lexer/: Lexer.cc  Lexer.cpp  Lexer.h  Lexer.hh  Token.h  TokenQueue.cc  TokenQueue.cpp  TokenQueue.h  TokenQueue.hh
parse/: Block.cc  Block.cpp  Expression.cc  Expression.cpp  File.cc  File.cpp  Function.cc  Function.cpp  If.cc  If.cpp  Loop.cc  Loop.cpp  Parse.h  Parse.hh  ParseError.cc  ParseError.cpp  ParseError.h  ParseError.hh  Pln.cc  Pln.cpp  Return.cc  Return.cpp  Statement.cc  Statement.cpp  Trap.cc  Trap.cpp  Type.cc  Type.cpp  Unit.cc  Unit.cpp  Variable.cc  Variable.cpp
parse/earley/: ASTNode.cc  ASTNode.cpp  ASTNode.h  ASTNode.hh  BNF.cc  BNF.cpp  BNF.h  BNF.hh  BNFParser.cc  BNFParser.cpp  BNFParser.h  Chart.cc  Chart.cpp  Chart.h  Chart.hh  Expr.cpp  Expr.h  Parse.cc  Parse.cpp  Parse.h  construct.cc  construct.h  construct.hh
semantic/: Scope.cc  Scope.cpp  Scope.h  Scope.hh  SemanticError.cc  SemanticError.cpp  SemanticError.hh  TypeUtil.cc  TypeUtil.cpp  TypeUtil.h  TypeUtil.hh
tests/: assign.dgr  comparison.dgr  control-flow.dgr  expr.dgr  func-general.dgr  func-primtive-argument.dgr  func-recursive.dgr  func-tuple.dgr  pln.dgr  var-primitive.dgr
tools/pit/: README.md  README.org  pit.py
util/: BuildTimestamp.cc  BuildTimestamp.cpp  BuildTimestamp.h  Colors.h  File.cc  File.cpp  File.h  Hash.cc  Hash.cpp  Hash.h  Path.cc  Path.cpp  Path.h  PrettyPrint.cc  PrettyPrint.cpp  PrettyPrint.h
util/tty/: Color.cc  Color.cpp  Color.h  Tree.cc  Tree.cpp  Tree.h  Tree.hh
